fixed some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,7 @@ div {
 
   background-color: limegreen;
   opacity: 0;
-  transition:
-    opacity .3s ease-out
-    ;
+  transition: opacity .3s ease-out;
 }
 
 .appear {
@@ -60,12 +58,10 @@ div {
 }
 
 @keyframes move {
-  0% {
-    transform: translate(0,0);
-  }
-  100% {
-    transform: translate(-150px,0);
-  }
+
+  0% { transform: translate(0, 0); }
+
+  100% { transform: translate(-150px, 0); }
 }
 
 .panel {
@@ -105,21 +101,16 @@ div {
 }
 
 @keyframes bounce {
-  0% {
-    transform: translate(-25px,-10px);
-  }
-  25% {
-    transform: translate(-50px,15px);
-  }
-  50% {
-    transform: translate(-75px,-20px);
-  }
-  75% {
-    transform: translate(-100px,25px);
-  }
-  100% {
-    transform: translate(-125px,-30px);
-  }
+
+  0% { transform: translate(-25px, -10px); }
+
+  25% { transform: translate(-50px, 15px); }
+
+  50% { transform: translate(-75px, -20px); }
+
+  75% { transform: translate(-100px, 25px); }
+
+  100% { transform: translate(-125px, -30px); }
 }
 
 .list {
@@ -150,10 +141,8 @@ div {
 }
 
 @keyframes lishow {
-  0% {
-    max-height: 0;
-  }
-  100% {
-    max-height: 1.5em;
-  }
+
+  0% { max-height: 0; }
+
+  100% { max-height: 1.5em; }
 }
